--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 /*****************Login********************/
   .form-container {
-    width: 40%;
+    width: 80% !important;
     border-radius: 0.75rem;
     background-color: rgba(17, 24, 39, 1);
     padding: 2rem;
     color: rgba(243, 244, 246, 1);
-    position: absolute;
-    top: 30%;
-    left: 40%;
+    margin: 30px;
+
+    justify-content: center !important;
+
+
  
   }
   
@@ -112,9 +114,6 @@
 
 }
 
-#contenidoCompleto{
-    display: none;
-}
 
 body{
     background-color: #a5a2a5 !important;
@@ -141,7 +140,7 @@ body{
 
 
 /***************Media queries***************/
-@media only screen and (min-width: 1000px){
+@media only screen and (min-width: 850px){
     .card{
         width: 40%;
     }
@@ -150,7 +149,7 @@ body{
         margin: 0%;
     }
     .form-container {
-        width: 20%;
+      width: 30% !important;
     }
 }
 
