--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ body{
 
 /***********************NUM***************************/
 .operador {
-  width: 50px; /* Ajusta el ancho de los botones */
+  width: 80px; /* Ajusta el ancho de los botones */
   height: 50px; /* Ajusta la altura de los botones */
   font-size: 18px;
   font-weight: bold;
@@ -180,6 +180,16 @@ body{
   }
 }
 
+
+
+
+/****************Modificador de texto**************/
+#texto{
+  width: 100%;
+  height: 150px;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
 
 
 /***************Media queries***************/
